# minichat

./: README.md  dune-project  minichat.opam
lib/: client.ml  client.mli  dune  server.ml  server.mli
lib/protocol/: common.ml  dune  message.ml  rtt.ml
